# baraoke

./: .gitignore  README.md  pyproject.toml
baraoke/: __main__.py  config.py  job.py  play.py  processes.py  whisper_json.py
