[project]
name = "baraoke"
version = "0.1.0"
authors = [
    { name = "Aarni Koskela", email = "akx@iki.fi" }
]
requires-python = ">=3.12"
dependencies = [
    "demucs",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
play = [
    "pygame>=2.6.1",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

[tool.uv.sources]
demucs = { git = "https://github.com/akx/demucs", rev = "less-deps" }

[tool.uv.build-backend]
module-root = ""
